--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,16 +1,39 @@
 version: 2
 jobs:
   build:
+    working_directory: ~/test
     steps:
       - checkout
-      - run: node index.js
+      - run:
+          name: Update npm
+          command: 'sudo npm install -g npm@latest'
+      - restore_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+      - run:
+          name: Install npm
+          command: npm install
+      - save_cache:
+          key: dependency-cache-{{ checksum "package.json" }}
+          paths:
+            - node_modules
   test:
     steps:
       - checkout
-      - run: mocha test/test.js
+      - run:
+          name: Test
+          command: npm test
+      - store_artifacts:
+          path: test-results.xml
+          prefix: tests
+
 workflows:
   version: 2
   build_and_test:
     jobs:
       - build
-      - test
+      - test:
+          requires:
+            - build
+          filters:
+            branches:
+              only: master
