--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "static web using express",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/test.js"
+    "test": "mocha --exit test/test.js"
   },
   "keywords": [
     "express"
