--- a/.circleci/config.yaml
+++ b/.circleci/config.yaml
@@ -1,7 +1,8 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/testing
+    docker:
+      - image: circleci/node:10.6.0
     steps:
       - checkout
       - run:
