--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,24 +17,6 @@ jobs:
           key: dependency-cache-{{ checksum "package.json" }}
           paths:
             - node_modules
-  test:
-    steps:
-      - checkout
       - run:
-          name: Test
+          name: Run Test
           command: npm test
-      - store_artifacts:
-          path: test-results.xml
-          prefix: tests
-
-workflows:
-  version: 2
-  build_and_test:
-    jobs:
-      - build
-      - test:
-          requires:
-            - build
-          filters:
-            branches:
-              only: master
